# sean-reed.github.io

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  _config.yml  archives.html  authors.html  categories.html  index.html  my-first-blog-post.html  pyproject.toml  requirements.txt  tags.html
.github/workflows/: pelican.yml
_posts/: 2020-12-25-welcome-to-jekyll.markdown
author/: sean-reed.html
category/: snippets.html
tag/: pelican.html
themes/alchemy/static/css/: theme.css
themes/alchemy/templates/: base.html
themes/alchemy/templates/include/: footer.html
website/: pelicanconf.py  publishconf.py
website/content/demos/: gas-station.md
website/content/django/: secure-staging-with-django.md
website/content/pages/: about.md  simulation-software.md
website/content/simulation/traffic/: gas-station.md
website/content/software/plant-simulation/: simtalk-pygments-lexer.md
