[tool.poetry]
name = "sean-reed"
version = "0.1.0"
description = ""
authors = ["Sean Reed <sean@sean-reed.com>"]
readme = "README.md"
packages = [{include = "sean_reed"}]

[tool.poetry.dependencies]
python = "^3.10"
pelican = {extras = ["markdown"], version = "^4.9.1"}
typogrify = "^2.0.7"


[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
