[project]
name = "sean-reed"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    {name = "Sean Reed", email = "sean@sean-reed.com"},
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "pelican[markdown]<5.0.0,>=4.9.1",
    "typogrify<3.0.0,>=2.0.7",
    "pygments<3.0.0,>=2.18.0",
    "pygments-simtalk<1.0.0,>=0.1.2",
]

[tool.uv]
default-groups = []